working on Day7 STILL. goddamn forward declaration

--- a/2022/day7/CMakeLists.txt
+++ b/2022/day7/CMakeLists.txt
@@ -4,5 +4,6 @@ project(day7)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(day7 main.cpp
-        FileNode.cpp
+        FileTree.cpp
+        FileTree.h
 )
